--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "classnames": "^1.1.4",
     "es6-promise": "^2.0.1",
     "property-expr": "^1.0.1",
-    "react": "^0.13.0-rc1",
-    "tiny-emitter": "^1.0.0"
+    "react": "^0.13.0",
+    "tiny-emitter": "^1.0.0",
+    "uncontrollable": "^1.1.3"
   },
-  
   "devDependencies": {
     "property-expr": "^1.0.1",
     "react-widgets": "^2.1.0",
