--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-input-message",
   "description": "unopinionated form input annotation",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "repository": {
     "url": "git://github.com/jquense/react-input-message.git"
   },
@@ -10,50 +10,47 @@
   "bugs": {
     "url": "https://github.com/jquense/react-input-message/issues"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": ""
   },
   "dependencies": {
-    "array-uniq": "^1.0.2",
     "classnames": "^1.1.4",
-    "es6-promise": "^2.0.1",
-    "uncontrollable": "^1.1.3"
+    "es6-promise": "^2.0.1"
   },
-
   "peerDependencies": {
-    "react": "^0.13.0"
+    "react": ">=0.13.0"
   },
-
   "devDependencies": {
-    "property-expr": "^1.0.1",
-    "react-widgets": "^2.1.0",
-    "validator": "^3.27.0",
-    "yup": "^0.5.1",
     "babel": "^4.0.0",
     "babel-loader": "^4.0.0",
     "chai": "^1.10.0",
-    "rimraf": "^2.2.8",
     "chai-as-promised": "^4.1.1",
+    "css-loader": "^0.9.1",
     "gulp": "^3.8.10",
-    "gulp-less": "^2.0.1",
     "gulp-babel": "^4.0.0",
+    "gulp-less": "^2.0.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
+    "imports-loader": "^0.6.3",
     "karma": "~0.12.23",
     "karma-mocha": "~0.1.9",
     "karma-mocha-reporter": "^0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-sourcemap-loader": "^0.3.2",
     "karma-webpack": "~1.2.2",
+    "less-loader": "^2.0.0",
     "mocha": "~1.21.4",
     "phantomjs": "~1.9.10",
+    "property-expr": "^1.0.1",
+    "react-widgets": "^2.4.1",
+    "rf-release": "git://github.com/jquense/rf-release",
+    "rimraf": "^2.2.8",
     "sinon-chai": "^2.6.0",
-    "imports-loader": "^0.6.3",
-    "css-loader": "^0.9.1",
     "style-loader": "^0.8.3",
-    "less-loader": "^2.0.0",
+    "validator": "^3.27.0",
     "webpack": "^1.4.15",
-    "webpack-dev-server": "^1.7.0"
+    "webpack-dev-server": "^1.7.0",
+    "yup": "^0.5.1"
   }
 }
