--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-input-message",
   "description": "unopinionated form input annotation",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "repository": {
     "url": "git://github.com/jquense/react-input-message.git"
   },
@@ -19,7 +19,7 @@
     "promise": "^7.0.3"
   },
   "peerDependencies": {
-    "react": ">=0.13.0"
+    "react": ">=0.13.0 || ^0.14.0-beta1"
   },
   "devDependencies": {
     "babel": "^5.2.16",
