--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-input-message",
   "description": "unopinionated form input annotation",
-  "version": "0.6.4",
+  "version": "0.7.0",
   "repository": {
     "url": "git://github.com/jquense/react-input-message.git"
   },
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "classnames": "^1.1.4",
-    "promise": "^7.0.3"
+    "promise": "^7.0.3",
+    "react-pure-render": "^1.0.2"
   },
   "peerDependencies": {
     "react": ">=0.13.0 || ^0.14.0-beta1"
