--- a/package.json
+++ b/package.json
@@ -12,49 +12,62 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "karma start --single-run"
+    "test": "karma start --single-run",
+    "tdd": "karma start",
+    "example": "rimraf ./example/bundle.js && webpack-dev-server --config webpack/example-config.babel.js",
+    "build:example": "webpack --config webpack/example-config.babel.js",
+    "build": "npm run test && npm run build:example && babel src --out-dir lib",
+    "release": "release"
   },
   "dependencies": {
     "classnames": "^1.1.4",
     "promise": "^7.0.3",
-    "react-pure-render": "^1.0.2"
+    "topeka": "^0.1.3"
   },
   "peerDependencies": {
-    "react": ">=0.13.0 || ^0.14.0-beta1"
+    "react": "^0.14.0-alpha1"
   },
   "devDependencies": {
-    "babel": "^5.2.16",
-    "babel-core": "^5.4.3",
+    "babel": "^5.8.22",
+    "babel-core": "^5.8.22",
     "babel-loader": "^5.0.0",
     "babel-plugin-object-assign": "^1.1.0",
-    "chai": "^1.10.0",
-    "chai-as-promised": "^4.1.1",
+    "chai": "^3.3.0",
+    "chai-as-promised": "^5.1.0",
     "css-loader": "^0.9.1",
+    "globalize": "^0.1.1",
     "gulp": "^3.8.10",
     "gulp-babel-helpers": "^2.1.0",
     "gulp-less": "^2.0.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "imports-loader": "^0.6.3",
-    "jq-release": "*",
-    "karma": "~0.12.23",
+    "karma": "~0.13.x",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-jsdom-launcher": "^1.0.0",
     "karma-mocha": "~0.1.9",
     "karma-mocha-reporter": "^0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.2",
-    "karma-webpack": "~1.2.2",
+    "karma-webpack": "^1.7.0",
     "less-loader": "^2.0.0",
     "mocha": "~1.21.4",
-    "phantomjs": "~1.9.10",
     "property-expr": "^1.0.1",
-    "react": "^0.13.1",
-    "react-widgets": "^2.4.1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-widgets": "^3.0.0-beta.1",
+    "release-script": "^0.5.3",
     "rimraf": "^2.2.8",
-    "sinon-chai": "^2.6.0",
     "style-loader": "^0.8.3",
+    "teaspoon": "^4.1.3",
     "validator": "^3.27.0",
-    "webpack": "^1.4.15",
-    "webpack-dev-server": "^1.7.0",
-    "yup": "^0.5.1"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.7.0"
+  },
+  "release-script": {
+    "defaultDryRun": "false",
+    "altPkgRootFolder": "lib"
   }
 }
