--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "topeka": "^0.1.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0-alpha1"
+    "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
     "babel": "^5.8.22",
