--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.0.0",
     "babel-plugin-object-assign": "^1.1.0",
-    "chai": "^3.3.0",
+    "chai": "^3.5.0",
     "chai-as-promised": "^5.1.0",
     "css-loader": "^0.9.1",
     "globalize": "^0.1.1",
@@ -53,6 +53,7 @@
     "karma-sourcemap-loader": "^0.3.2",
     "karma-webpack": "^1.7.0",
     "less-loader": "^2.0.0",
+    "lolex": "^1.4.0",
     "mocha": "~1.21.4",
     "property-expr": "^1.0.1",
     "react": "^0.14.0",
@@ -60,6 +61,8 @@
     "react-widgets": "^3.0.0-beta.1",
     "release-script": "^0.5.3",
     "rimraf": "^2.2.8",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.8.3",
     "teaspoon": "^5.0.0",
     "validator": "^3.27.0",
