--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.22",
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.0.0",
-    "babel-plugin-object-assign": "^1.1.0",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-jason": "^1.0.1",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.1.0",
     "css-loader": "^0.9.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^5.1.1",
     "globalize": "^0.1.1",
     "gulp": "^3.8.10",
     "gulp-babel-helpers": "^2.1.0",
