--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "topeka": "^0.4.0",
-    "universal-promise": "^1.1.0"
+    "prop-types": "^15.5.9",
+    "topeka": "^0.4.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
