upgrade react & webpack & convert test cases

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["jason"]
+  "presets": [
+      "@babel/preset-react"
+  ],
+  "plugins": [
+      "@babel/plugin-syntax-object-rest-spread",
+      ["@babel/plugin-proposal-decorators", { "legacy": true }],
+      ["@babel/plugin-proposal-class-properties", { "loose": true}],
+      "@babel/plugin-syntax-dynamic-import"
+  ]
 }
