--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-input-message",
   "description": "unopinionated form input annotation",
-  "version": "0.15.1",
+  "version": "0.15.2",
   "repository": {
     "url": "git://github.com/jquense/react-input-message.git"
   },
@@ -12,9 +12,8 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "karma start --single-run",
-    "tdd": "karma start",
-    "example": "rimraf ./example/bundle.js && webpack-dev-server --config webpack/example-config.babel.js",
+    "test": "jest",
+    "example": "webpack-dev-server --config webpack/example-config.babel.js",
     "build:example": "webpack --config webpack/example-config.babel.js",
     "build": "npm run test && npm run build:example && babel src --out-dir lib",
     "release": "release"
@@ -22,57 +21,44 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "prop-types": "^15.5.9",
-    "topeka": "^1.0.0"
-  },
-  "peerDependencies": {
-    "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
+    "topeka": "^1.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-jason": "^1.0.1",
-    "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.1.0",
-    "css-loader": "^0.9.1",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^9.1.4",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-jason": "^6.0.1",
+    "css-loader": "^3.2.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^5.1.1",
-    "globalize": "^0.1.1",
-    "gulp": "^3.8.10",
-    "gulp-babel-helpers": "^2.1.0",
-    "gulp-less": "^2.0.1",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "^1.2.0",
-    "imports-loader": "^0.6.3",
-    "karma": "~0.13.x",
-    "karma-chai": "^0.1.0",
-    "karma-chai-as-promised": "^0.1.2",
-    "karma-jsdom-launcher": "^1.0.0",
-    "karma-mocha": "~0.1.9",
-    "karma-mocha-reporter": "^0.3.1",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-sinon-chai": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.2",
-    "karma-webpack": "^1.7.0",
+    "jest": "^24.9.0",
     "less-loader": "^2.0.0",
     "lolex": "^1.4.0",
     "mocha": "~1.21.4",
     "property-expr": "^1.0.1",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-widgets": "^3.0.0-beta.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-widgets": "^4.4.11",
+    "react-widgets-globalize": "^5.0.20",
     "release-script": "^1.0.2",
     "rimraf": "^2.2.8",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^7.4.2",
     "style-loader": "^0.8.3",
-    "teaspoon": "^5.0.0",
     "validator": "^3.27.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.7.0"
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
+  },
+  "jest": {
+    "testRegex": "test"
   },
   "release-script": {
     "altPkgRootFolder": "lib"
