--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "prop-types": "^15.5.9",
-    "topeka": "^1.0.1"
+    "prop-types": "^15.5.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
